solving the conversion to integer